[workspace]
resolver = "2"
members  = ["crates/*", "tasks/*"]

[workspace.package]
authors     = ["Yagiz Nizipli <yagiz@nizipli.com"]
description = "Pacquet"
edition     = "2021"
homepage    = "https://github.com/anonrig/pacquet"
keywords    = ["nodejs", "package", "manager", "pnpm", "npm"]
license     = "MIT"
repository  = "https://github.com/anonrig/pacquet"

[workspace.dependencies]
# Crates
pacquet_cli          = { path = "crates/cli" }
pacquet_registry     = { path = "crates/registry" }
pacquet_tarball      = { path = "crates/tarball" }
pacquet_package_json = { path = "crates/package_json" }
pacquet_lockfile     = { path = "crates/lockfile" }
pacquet_npmrc        = { path = "crates/npmrc" }
pacquet_executor     = { path = "crates/executor" }
pacquet_cafs         = { path = "crates/cafs" }
pacquet_diagnostics  = { path = "crates/diagnostics" }

# Dependencies
async-recursion    = { version = "1.0.5" }
clap               = { version = "4", features = ["derive", "string"] }
dashmap            = { version = "5.5.3" }
derive_more        = { version = "0.99.17" }
home               = { version = "0.5.5" }
insta              = { version = "1.32.0", features = ["yaml", "glob", "walkdir"] }
itertools          = { version = "0.11.0" }
futures-util       = { version = "0.3.28" }
miette             = { version = "5.9.0", features = ["fancy"] }
os_display         = { version = "0.1.3" }
reflink-copy       = { version = "0.1.8" }
reqwest            = { version = "0.11", default-features = false, features = ["json", "native-tls-vendored"] }
node-semver        = { version = "2.1.0" }
pipe-trait         = { version = "0.4.0" }
rayon              = { version = "1.8.0" }
serde              = { version = "1.0.188", features = ["derive"] }
serde_ini          = { version = "0.2.0" }
serde_json         = { version = "1.0.107", features = ["preserve_order"] }
serde_yaml         = { version = "0.9.1" }
split-first-char   = { version = "0.0.0" }
ssri               = { version = "9.0.0" }
strum              = { version = "0.25.0", features = ["derive"] }
tar                = { version = "0.4.40" }
text-block-macros  = { version = "0.1.1" }
thiserror          = { version = "1.0.48" }
tracing            = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio              = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
walkdir            = { version = "2.4.0" }
which              = { version = "4.4.2" }
zune-inflate       = { version = "0.2.54" }


# Dev dependencies
criterion         = { version = "0.5.1", features = ["async_tokio"] }
pretty_assertions = { version = "1.4.0" }
project-root      = { version = "0.2.2" }
tempfile          = { version = "3.8.0" }
mockito           = { version = "1.2.0" }

[workspace.metadata.workspaces]
allow_branch = "main"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.

# Use the `--profile release-debug` flag to show symbols in release mode.
# e.g. `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true
