[package]
name                  = "pacquet_cli"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "pacquet"
path = "src/bin/main.rs"

[dependencies]
pacquet_cafs         = { workspace = true }
pacquet_executor     = { workspace = true }
pacquet_npmrc        = { workspace = true }
pacquet_package_json = { workspace = true }
pacquet_registry     = { workspace = true }
pacquet_tarball      = { workspace = true }
pacquet_diagnostics  = { workspace = true }

clap               = { workspace = true }
http-cache-reqwest = { workspace = true }
futures-util       = { workspace = true }
moka               = { workspace = true }
rayon              = { workspace = true }
reflink-copy       = { workspace = true }
reqwest            = { workspace = true }
reqwest-middleware = { workspace = true }
node-semver        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }

[dev-dependencies]
insta    = { workspace = true }
tempfile = { workspace = true }
walkdir  = { workspace = true }
