[package]
name                  = "pacquet_cli"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "pacquet"
path = "src/bin/main.rs"

[dependencies]
pacquet_cafs            = { workspace = true }
pacquet_executor        = { workspace = true }
pacquet_fs              = { workspace = true }
pacquet_lockfile        = { workspace = true }
pacquet_npmrc           = { workspace = true }
pacquet_package_json    = { workspace = true }
pacquet_package_manager = { workspace = true }
pacquet_registry        = { workspace = true }
pacquet_tarball         = { workspace = true }
pacquet_diagnostics     = { workspace = true }

async-recursion = { workspace = true }
clap            = { workspace = true }
futures-util    = { workspace = true }
rayon           = { workspace = true }
reflink-copy    = { workspace = true }
reqwest         = { workspace = true }
node-semver     = { workspace = true }
pipe-trait      = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }

[dev-dependencies]
pacquet_testing_utils = { workspace = true }

insta             = { workspace = true }
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
walkdir           = { workspace = true }
