[package]
name                  = "pacquet-config"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-patching  = { workspace = true }
pacquet-store-dir = { workspace = true }

derive_more   = { workspace = true }
home          = { workspace = true }
indexmap      = { workspace = true }
miette        = { workspace = true }
pipe-trait    = { workspace = true }
serde         = { workspace = true }
serde-saphyr  = { workspace = true }
smart-default = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
