[package]
name                  = "pacquet-modules-yaml"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]

[dev-dependencies]
pacquet-testing-utils = { workspace = true }

pipe-trait        = { workspace = true }
pretty_assertions = { workspace = true }
serde_json        = { workspace = true }
tempfile          = { workspace = true }
