[package]
name                  = "pacquet-modules-yaml"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-diagnostics = { workspace = true }

derive_more  = { workspace = true }
httpdate     = { version = "1.0.3" }
indexmap     = { version = "2.14.0", features = ["serde"] }
pathdiff     = { version = "0.2.3" }
pipe-trait   = { workspace = true }
serde        = { workspace = true }
serde-saphyr = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
pacquet-testing-utils = { workspace = true }

chrono            = { version = "0.4.44", default-features = false, features = ["clock"] }
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
text-block-macros = { workspace = true }
