[package]
name                 = "pacquet-network"
description          = "Network utility functions used by pacquet"
version              = "0.0.1"
publish              = false
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

[dependencies]
num_cpus   = { workspace = true }
pipe-trait = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
