[package]
name                  = "pacquet-npmrc"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-network   = { workspace = true }
pacquet-store-dir = { workspace = true }

home          = { workspace = true }
pipe-trait    = { workspace = true }
serde         = { workspace = true }
serde-saphyr  = { workspace = true }
serde_ini     = { workspace = true }
smart-default = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
