[package]
name                  = "pacquet-package-manager"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-cmd-shim         = { workspace = true }
pacquet-fs               = { workspace = true }
pacquet-lockfile         = { workspace = true }
pacquet-network          = { workspace = true }
pacquet-npmrc            = { workspace = true }
pacquet-package-manifest = { workspace = true }
pacquet-registry         = { workspace = true }
pacquet-store-dir        = { workspace = true }
pacquet-tarball          = { workspace = true }

async-recursion = { workspace = true }
dashmap         = { workspace = true }
derive_more     = { workspace = true }
futures-util    = { workspace = true }
node-semver     = { workspace = true }
pipe-trait      = { workspace = true }
rayon           = { workspace = true }
reflink-copy    = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
miette          = { workspace = true }

[dev-dependencies]
pacquet-registry-mock = { workspace = true }
pacquet-testing-utils = { workspace = true }

node-semver       = { workspace = true }
insta             = { workspace = true }
pretty_assertions = { workspace = true }
serde-saphyr      = { workspace = true }
ssri              = { workspace = true }
tempfile          = { workspace = true }
walkdir           = { workspace = true }
