[package]
name                  = "pacquet_package_manager"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet_fs       = { workspace = true }
pacquet_lockfile = { workspace = true }
pacquet_npmrc    = { workspace = true }

derive_more   = { workspace = true }
rayon         = { workspace = true }
reflink-copy  = { workspace = true }
miette        = { workspace = true }
