[package]
name                  = "pacquet_package_manager"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet_fs           = { workspace = true }
pacquet_lockfile     = { workspace = true }
pacquet_npmrc        = { workspace = true }
pacquet_package_json = { workspace = true }
pacquet_registry     = { workspace = true }
pacquet_tarball      = { workspace = true }

async-recursion = { workspace = true }
derive_more     = { workspace = true }
futures-util    = { workspace = true }
node-semver     = { workspace = true }
pipe-trait      = { workspace = true }
rayon           = { workspace = true }
reflink-copy    = { workspace = true }
reqwest         = { workspace = true }
tracing         = { workspace = true }
miette          = { workspace = true }

[dev-dependencies]
pacquet_testing_utils = { workspace = true }

node-semver       = { workspace = true }
insta             = { workspace = true }
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
tokio             = { workspace = true }
walkdir           = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
junction = { workspace = true }
