[package]
name                 = "pacquet-registry-mock"
version              = "0.0.0"
description          = "Wrapper of @pnpm/registry-mock"
publish              = false
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

[dependencies]
advisory-lock = { workspace = true }
assert_cmd    = { workspace = true }
pipe-trait    = { workspace = true }
portpicker    = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
which         = { workspace = true }
sysinfo       = { workspace = true }
