[package]
name                  = "pacquet_registry"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet_package_json = { workspace = true }
pacquet_tarball      = { workspace = true }

elsa               = { workspace = true }
reqwest            = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry      = { workspace = true }
miette             = { workspace = true }
node-semver        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
