[package]
name                 = "pacquet-store-dir"
description          = "Abstraction over store-dir paths"
version              = "0.0.1"
publish              = false
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true }
serde       = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
pipe-trait        = { workspace = true }
