[package]
name                  = "pacquet-tarball"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-diagnostics = { workspace = true }
pacquet-store-dir   = { workspace = true }

base64       = { workspace = true }
dashmap      = { workspace = true }
derive_more  = { workspace = true }
miette       = { workspace = true }
pipe-trait   = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
ssri         = { workspace = true }
tar          = { workspace = true }
tokio        = { workspace = true }
zune-inflate = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
