[package]
name                  = "pacquet_benchmark"
version               = "0.0.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet_registry = { workspace = true }
pacquet_tarball  = { workspace = true }

criterion    = { workspace = true }
mockito      = { workspace = true }
tokio        = { workspace = true }
tempfile     = { workspace = true }
pico-args    = { workspace = true }
project-root = { workspace = true }
reqwest      = { workspace = true }
node-semver  = { workspace = true }
